# cortex

./: .gitignore  Cargo.toml  README.md  cortex_prompt.txt
cortex-tui-framework/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-buffer/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-buffer/src/: buffer.rs  cell.rs  diff.rs  double_buffer.rs  grapheme.rs  lib.rs
cortex-tui-framework/crates/cortex-tui-core/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-input/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-layout/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-syntax/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-terminal/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-text/: Cargo.toml
cortex-tui-framework/crates/cortex-tui-widgets/: Cargo.toml
cortex-tui-framework/src/: lib.rs
src/cortex-agents/: Cargo.toml
src/cortex-agents/src/: agent.rs  control.rs  lib.rs  mention.rs  permission.rs  prompt.rs  registry.rs  routing.rs
src/cortex-app-server/: Cargo.toml
src/cortex-app-server/src/: admin.rs  auth.rs  config.rs  error.rs  file_watcher.rs  handlers.rs  lib.rs  main.rs  mdns.rs  middleware.rs  session_manager.rs  share.rs  state.rs  storage.rs  streaming.rs  tasks.rs  terminal_streaming.rs  websocket.rs
src/cortex-apply-patch/: Cargo.toml
src/cortex-apply-patch/src/: applier.rs  backup.rs  error.rs  fuzzy.rs  hunk.rs  lib.rs  parser.rs
src/cortex-batch/: Cargo.toml
src/cortex-batch/src/: batch_ops.rs  lib.rs  multi_edit.rs  search_replace.rs
src/cortex-cli/: Cargo.toml  build.rs
src/cortex-cli/src/: acp_cmd.rs  alias_cmd.rs  cache_cmd.rs  compact_cmd.rs  completion_setup.rs  debug_sandbox.rs  export_cmd.rs  feedback_cmd.rs  github_cmd.rs  import_cmd.rs  lib.rs  lock_cmd.rs  login.rs  logs_cmd.rs  main.rs  models_cmd.rs  plugin_cmd.rs  pr_cmd.rs  shell_cmd.rs  stats_cmd.rs  styled_output.rs  uninstall_cmd.rs  upgrade_cmd.rs  workspace_cmd.rs  wsl_paths.rs
src/cortex-collab/: Cargo.toml
src/cortex-collab/src/: control.rs  guards.rs  handler.rs  lib.rs  role.rs  source.rs  status.rs  thread_manager.rs
src/cortex-commands/: Cargo.toml
src/cortex-commands/src/: command.rs  executor.rs  import.rs  lib.rs  loader.rs  manager.rs  registry.rs
src/cortex-common/: Cargo.toml
src/cortex-common/src/: ansi.rs  approval_presets.rs  config_override.rs  config_substitution.rs  cwd_guard.rs  dirs.rs  duration_utils.rs  file_locking.rs  file_permissions.rs  fuzzy_match.rs  http_client.rs  lib.rs  path_consistency.rs  path_utils.rs  signal_safety.rs  subprocess_env.rs  subprocess_output.rs  text_sanitize.rs  timeout.rs  truncate.rs
src/cortex-compact/: Cargo.toml
src/cortex-compact/src/: compactor.rs  config.rs  lib.rs  summarizer.rs
src/cortex-core/: Cargo.toml
src/cortex-core/src/: events.rs  frame_engine.rs  lib.rs  style.rs
src/cortex-engine/: Cargo.toml
src/cortex-engine/examples/: test_api.rs
src/cortex-engine/src/: agents.rs  ai_utils.rs  api_client.rs  approval.rs  async_utils.rs  auth_token.rs  autonomy.rs  billing_client.rs  code_analysis.rs  command_executor.rs  compact.rs  compaction.rs  config_loader.rs  context_utils.rs  conversation_state.rs  delegates.rs  diff.rs  embeddings.rs  environment.rs  error.rs  events.rs  features.rs  file_utils.rs  formatting.rs  git_info.rs  git_ops.rs  git_snapshot.rs  health.rs  hooks.rs  input.rs  instructions.rs  json_utils.rs  language_utils.rs  lib.rs  logging.rs  message_parts.rs  metrics.rs  model_family.rs  output.rs  output_format.rs  (+29 more)
src/cortex-exec/: Cargo.toml
src/cortex-exec/src/: lib.rs  output.rs  runner.rs  tests.rs
src/cortex-execpolicy/: Cargo.toml
src/cortex-execpolicy/src/: command.rs  config.rs  context.rs  danger.rs  decision.rs  detection.rs  error.rs  lib.rs  policy.rs  tests.rs
src/cortex-feedback/: Cargo.toml
src/cortex-feedback/src/: lib.rs
src/cortex-file-search/: Cargo.toml
src/cortex-file-search/src/: cache.rs  config.rs  error.rs  index.rs  lib.rs  matcher.rs  result.rs  search.rs
src/cortex-ghost/: Cargo.toml
src/cortex-ghost/src/: config.rs  ghost_commit.rs  lib.rs  restore.rs
src/cortex-hooks/: Cargo.toml
src/cortex-hooks/src/: config.rs  executor.rs  formatter.rs  hook.rs  lib.rs  prompt_hook.rs  session_env.rs
src/cortex-keyring-store/: Cargo.toml
src/cortex-keyring-store/src/: lib.rs
src/cortex-linux-sandbox/: Cargo.toml
src/cortex-linux-sandbox/src/: landlock.rs  lib.rs  main.rs  mounts.rs  run_main.rs  seccomp.rs
src/cortex-lmstudio/: Cargo.toml
src/cortex-lmstudio/src/: client.rs  lib.rs  models.rs
src/cortex-login/: Cargo.toml
src/cortex-login/src/: constants.rs  device_code_auth.rs  encrypted.rs  keyring.rs  legacy.rs  lib.rs  pkce.rs  server.rs  storage.rs  token.rs  types.rs  utils.rs
src/cortex-lsp/: Cargo.toml
src/cortex-lsp/src/: diagnostics.rs  lib.rs  manager.rs  markers.rs  root_detection.rs  server_config.rs  workspace.rs
src/cortex-mcp-client/: Cargo.toml
src/cortex-mcp-client/src/: client.rs  discovery.rs  lib.rs  transport.rs
src/cortex-mcp-client/tests/: integration_test.rs
src/cortex-mcp-server/: Cargo.toml
src/cortex-mcp-server/src/: builder.rs  handlers.rs  lib.rs  providers.rs  server.rs
src/cortex-mcp-types/: Cargo.toml
src/cortex-mcp-types/src/: capabilities.rs  content.rs  initialization.rs  jsonrpc.rs  lib.rs  logging.rs  methods.rs  notifications.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  tools.rs
src/cortex-network-proxy/: Cargo.toml
src/cortex-network-proxy/src/: config.rs  dns.rs  host.rs  ip_validation.rs  lib.rs  pattern.rs  policy.rs  state.rs
src/cortex-otel/: Cargo.toml
src/cortex-otel/src/: config.rs  lib.rs  otel_event_manager.rs  otel_provider.rs
src/cortex-plugins/: Cargo.toml
src/cortex-plugins/src/: api.rs  commands.rs  config.rs  error.rs  events.rs  lib.rs  loader.rs  manager.rs  manifest.rs  plugin.rs  registry.rs  runtime.rs  sdk.rs
src/cortex-plugins/tests/: edge_case_tests.rs  integration_tests.rs  lifecycle_tests.rs
src/cortex-process-hardening/: Cargo.toml
src/cortex-process-hardening/src/: lib.rs
(+978 files in other folders)
