[package]
name = "cortex-agents"
version = "0.1.0"
edition = "2021"
description = "Multi-agent system for Cortex CLI"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = { workspace = true }
async-trait = "0.1"
async-recursion = "1"
tracing = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "6"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
