[package]
name = "cortex-apply-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Patch application for Cortex CLI"

[lib]
name = "cortex_apply_patch"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
