[package]
name = "cortex-batch"
version = "0.1.0"
edition = "2021"
description = "Batch operations and MultiEdit tools for Cortex CLI"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"
glob = "0.3"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
