[package]
name = "cortex-compact"
version = "0.1.0"
edition = "2021"
description = "Auto-compaction for Cortex CLI conversations"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"

# For disk space detection on Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
