[package]
name = "cortex-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless execution mode for Cortex CLI"

[lib]
name = "cortex_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cortex-engine = { workspace = true }
cortex-protocol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
