[package]
name = "cortex-feedback"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Feedback collection and reporting for Cortex CLI"

[lints]
workspace = true

[dependencies]
cortex-protocol = { workspace = true }
cortex-engine = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
