[package]
name = "cortex-hooks"
version = "0.1.0"
edition = "2021"
description = "Hook system for Cortex CLI (formatters, post-edit actions)"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
glob = "0.3"
lazy_static = "1.4"
dirs = "5.0"
async-trait = "0.1"
