[package]
name = "cortex-linux-sandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux sandbox wrapper binary for Cortex CLI"

[[bin]]
name = "cortex-linux-sandbox"
path = "src/main.rs"

[lib]
name = "cortex_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Landlock
landlock = "0.4"

# Seccomp
seccompiler = "0.4"

# Linux libc bindings
libc = "0.2"
